# jsonette

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PLANNING.md  README.md  ROADMAP.md  mkdocs.yml
.github/: perf_schema.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: deploy-docs.yml  engine-ci.yml  macos-ci.yml  release.yml
bridge-spike/: Main.java  Main.kt  main.c  main.js  main.py  main.swift  module.modulemap
cli/: Cargo.toml  LICENSE-APACHE  README.md
cli/src/: args.rs  main.rs  utils.rs
cli/src/commands/: config.rs  convert.rs  explore.rs  format.rs  generate.rs  mod.rs  query.rs
cli/tests/: cli_tests.rs
docs/: build-docs.sh  cli.md  engine-api.md  index.md  macos-app.md  signing.md
docs/architecture/: architecture.mdj  blueprint.md
docs/architecture/decisions/: 0000-register.md  0001-native-per-os-macos-first-with-tauri-comparison.md  0002-engine-written-in-rust-shared-via-uniffi.md  0003-strict-engine-shell-separation.md  0004-macos-editor-selection-with-fallback.md  0005-jsonpath-primary-query-language.md  0006-project-name-selection.md  0007-licensing.md  0008-cli-application-via-cargo-workspace.md  0009-visionary-macos-ui-ux-blueprint.md
docs/architecture/html-docs/contents/: diagrams.html  element_index.html  navigation.html
docs/design/: ui-ux-blueprint.md
engine/: .gitignore  BRIDGE.md  Cargo.toml  README.md
engine/src/: completion.rs  converter.rs  formatter.rs  generator.rs  json_node.rs  lib.rs  query.rs  settings.rs  types.rs
engine/src/parser/: mod.rs  strict.rs  tolerant.rs  utils.rs
engine/tests/: api_tests.rs  bindgen_tests.rs  prop_tests.rs
macos/: .swiftlint.yml  Info.plist  project.yml  setup.sh
macos/Sources/: ContentView.swift  DocumentManager.swift  GeneratorCanvasView.swift  JsonDocument.swift  JsonEditorView.swift  NativeJsonEditor.swift  SettingsView.swift  SymbolsPanelView.swift  jsonetteApp.swift
macos/Tests/: jsonetteTests.swift
scripts/: benchmark.py
