[package]
name = "jsonette"
version = "0.1.0"
edition = "2024"
description = "JSON parse, format, query, and diagnostics engine — core library for the jsonette tool"
repository = "https://github.com/dev-ette/jsonette"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dev-ette/jsonette"
readme = "README.md"
keywords = ["json", "jsonpath", "parser", "format", "query"]
categories = ["parser-implementations", "encoding"]

# NOTE: UniFFI crate-type (staticlib + cdylib) will be added in the bridge
# setup issue (#13). Default lib crate-type is correct until then.

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }