[package]
name = "jsonette-core"
version = "0.3.0"
edition = "2024"
description = "JSON parse, format, query, and diagnostics engine — core library for the jsonette tool"
repository = "https://github.com/dev-ette/jsonette"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dev-ette/jsonette"
readme = "README.md"
keywords = ["json", "jsonpath", "parser", "format", "query"]
categories = ["parser-implementations", "encoding"]

# NOTE: UniFFI crate-type (staticlib + cdylib) will be added in the bridge
# setup issue (#13). Default lib crate-type is correct until then.
[lib]
name = "jsonette"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_json_path = "0.7"
uniffi = { version = "0.32.0", features = ["cli"] }

[dev-dependencies]
proptest = "1.11"
